# BoostIPCSample

./: .gitignore  BoostIPCSample.sln  CMakeLists.txt  README.md
BoostIPCReceive/: BoostIPCReceive.vcxproj  BoostIPCReceive.vcxproj.filters  BoostManagedSharedMemReceive.cpp  BoostManagedSharedMemReceive.hpp  BoostMessageQueueReceive.cpp  BoostMessageQueueReceive.hpp  BoostMmapFileReceive.cpp  BoostMmapFileReceive.hpp  BoostSharedMemReceive.cpp  BoostSharedMemReceive.hpp  main.cpp  recv_main.cpp
BoostIPCSend/: BoostIPCSend.vcxproj  BoostIPCSend.vcxproj.filters  BoostManagedSharedMemSend.cpp  BoostManagedSharedMemSend.hpp  BoostMessageQueueSend.cpp  BoostMessageQueueSend.hpp  BoostMmapFileSend.cpp  BoostMmapFileSend.hpp  BoostSharedMemSend.cpp  BoostSharedMemSend.hpp  IPC_IF.hpp  main.cpp  send_main.cpp
src/: BoostIPC_IF.hpp  IPC_IF.hpp
src/BoostIPCReceive/: BoostManagedSharedMemReceive.cpp  BoostManagedSharedMemReceive.hpp  IPC_IF.hpp  recv_main.cpp
src/BoostIPCSend/: BoostManagedSharedMemSend.h  BoostSharedMemSend.hpp  send_main.cpp
test/: CMakeLists.txt  client_test_code.cpp  execute_test_linux.sh  server_main.cpp
